--- a/index.css
+++ b/index.css
@@ -1,1 +1,19 @@
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    color: #4F545F;
+    margin: 0;
+    padding: 10px;
+}
+h3{
+    background-color: #55B3C5;
+    margin: 0;
+    padding: 20px;
+    color: white;
+}
+fieldset{
+    margin: 20px;
+    padding: 20px;
+    border: 2px dashed #000000;
+}
